prevent nodes from getting bigger when navbar un-collapses

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -19,7 +19,7 @@
   right: 0px;
   top: 0px;
   background-image: url("/images/theme/nodes-horizontal-line-inverse.png");
-  background-size: auto 25%;
+  background-size: auto @navbarHeight/4;
   background-repeat: repeat-x;
   background-position: right bottom;
 }
@@ -34,7 +34,7 @@
 .navbar.navbar-default .container {
   background-color: @blue;
   background-image: url("/images/theme/nodes-left-inverse.png");
-  background-size: auto 25%;
+  background-size: auto @navbarHeight/4;
   background-repeat: no-repeat;
   background-position: right bottom;
 }
